--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -14,7 +14,7 @@
         <p class="subtitle">Proteja seu patrimônio e planeje o futuro com uma holding estruturada pela W1.</p>
         <div class="buttons">
             <a href="{% url 'signup' %}" class="btn">Crie sua Conta</a>
-            <button onclick="comparePrices()">Compare Nossos Preços</button>
+            <button onclick="comparePrices()">Acessar Painel</button>
         </div>
     </div>
 </section>
@@ -93,8 +93,8 @@
 <script>
     // Pass static image paths to JavaScript
     window.modelImages = {
-        aluguel: "{% static 'images/aluguel.png' %}",
-        empresas: "{% static 'images/empresa.jpg' %}",
+        aluguel: "{% static 'images/aluguel.jpeg' %}",
+        empresas: "{% static 'images/empresa.png' %}",
         sucessorio: "{% static 'images/sucessorio.jpg' %}"
     };
 </script>
