--- a/core/templates/core/login.html
+++ b/core/templates/core/login.html
@@ -12,8 +12,8 @@
     {# <link rel="stylesheet" href="{% static 'css/auth_styles.css' %}"> #}
 {% endblock head_extra_styles %}
 
-{% block header_content %}{% endblock %}
-{% block footer_content %}{% endblock %}
+{% block header %}{% endblock %}
+{% block footer %}{% endblock %}
 
 {% block content %}
 <div class="auth-page">
